# noosphere

./: .gitattributes  .gitignore  Cargo.toml  START MINDCHAIN HOST.cmd
crates/noos-agent-class/: Cargo.toml
crates/noos-agent-class/src/: lib.rs
crates/noos-artifact-service/: Cargo.toml
crates/noos-artifact-service/src/: lib.rs  main.rs  server.rs  web_bundle.rs  web_restore_import.rs
crates/noos-braid/: Cargo.toml
crates/noos-braid/src/: body.rs  dag.rs  fork.rs  header.rs  keyless.rs  lib.rs  tests.rs  vector_gen.rs  vector_tests.rs
crates/noos-cli/: Cargo.toml
crates/noos-cli/src/: invitation.rs  lib.rs  main.rs  manifest.rs  wwm.rs  wwm_client.rs
crates/noos-cli/tests/: golden.rs
crates/noos-codec/: Cargo.toml
crates/noos-codec/src/: lib.rs  tests.rs
crates/noos-contracts/: Cargo.toml
crates/noos-contracts/src/: agent_object.rs  lib.rs  router.rs
crates/noos-crypto/: Cargo.toml  build.rs
crates/noos-crypto/src/: bls.rs  dkg.rs  domains.rs  ed25519.rs  error.rs  hash.rs  hkdf.rs  lib.rs  threshold.rs  vector_tests.rs
crates/noos-crypto/tests/: exclusion.rs  inherited_defect.rs  registry.rs
crates/noos-da/: Cargo.toml
crates/noos-da/src/: artifact.rs  artifact_tests.rs  body.rs  custody.rs  custody_tests.rs  descriptor.rs  error.rs  lib.rs  merkle.rs  tests.rs  vector_gen.rs  vector_tests.rs
crates/noos-executor-edge/: Cargo.toml
crates/noos-executor-edge/src/: lib.rs
crates/noos-fuzz/: Cargo.toml
crates/noos-fuzz/tests/: decoder_vm_protocol_battery.rs
crates/noos-grain/: Cargo.toml
crates/noos-grain/src/: bytes.rs  eval.rs  lib.rs  noun.rs  tests.rs  vectors.rs
crates/noos-ground/: Cargo.toml
crates/noos-ground/src/: exp2_table.rs  lib.rs  pulse.rs  ticket.rs  u256.rs  vector_tests.rs
crates/noos-indexer/: Cargo.toml
crates/noos-indexer/src/: ingest.rs  lib.rs  main.rs  wwm.rs
crates/noos-indexer/tests/: contracts.rs  forwarding.rs  ingest.rs
crates/noos-jet/: Cargo.toml
crates/noos-jet/risc0-methods/: Cargo.toml  build.rs  rebuild-guest.ps1
crates/noos-jet/risc0-methods/guest/: Cargo.toml
crates/noos-jet/risc0-methods/guest/src/: main.rs
crates/noos-jet/risc0-methods/shared/: Cargo.toml
crates/noos-jet/risc0-methods/shared/src/: lib.rs
crates/noos-jet/risc0-methods/src/: lib.rs
crates/noos-jet/src/: architecture.rs  cert.rs  corpus.rs  jets.rs  lib.rs  proof.rs  registry.rs  risc0.rs  rv32.rs  tests.rs  vectors.rs
crates/noos-lumen/: Cargo.toml
crates/noos-lumen/src/: engine.rs  fees.rs  issuance.rs  lib.rs  neural_oracle.rs  objects.rs  smt.rs  state.rs  state_tests.rs  vector_gen.rs  wwm.rs
crates/noos-mind/: Cargo.toml
crates/noos-mind-gateway/: Cargo.toml
crates/noos-mind-gateway/src/: lib.rs
crates/noos-mind-gateway/src/service/: backend.rs  chain.rs  config.rs  mod.rs  store.rs
crates/noos-mind-gateway/src/service/v2/: auth.rs  executor.rs  mod.rs  model.rs  store.rs  tests.rs
crates/noos-mind-gateway/src/service/web_capacity/: benchmark.rs  config.rs  host.rs  mod.rs  model.rs  security.rs  store.rs  tests.rs
crates/noos-mind/src/: lib.rs  service.rs  snapshot.rs
crates/noos-nel/: Cargo.toml
crates/noos-nel/fixtures/: claim-prerequisites-v1.json
crates/noos-nel/src/: inference.rs  lab.rs  lib.rs  luts.rs  public.rs  registered.rs  tests.rs
crates/noos-nel/src/inference/: tests.rs
crates/noos-nel/src/runtime/: conformance.rs  gguf.rs  identity.rs  mod.rs  profile.rs
crates/noos-nel/tests/: settlement.rs
crates/noos-node/: Cargo.toml
crates/noos-node/src/: artifact_store_port.rs  auth.rs  bonsai_fixture.rs  consensus.rs  devnet_fixture.rs  genesis.rs  lib.rs  mempool.rs  metrics.rs  network.rs  pool.rs  resolver.rs  roots.rs  rpc.rs  store_port.rs  supervisor.rs  sync.rs  view.rs  witness_role.rs
crates/noos-node/src/tests/: claims.rs  contract_exec.rs  devnet_finality.rs  e2e.rs  import_matrix.rs  mempool_tests.rs  mod.rs  network_e2e.rs  retention.rs  rpc_supervisor.rs  safety.rs  security_import.rs  sync_tests.rs  util.rs
crates/noos-node/tests/: noosd_cli.rs
crates/noos-p2p/: Cargo.toml
crates/noos-p2p/src/: backoff.rs  envelope.rs  fault.rs  frame.rs  identity.rs  lib.rs  limits.rs  node.rs  queue.rs
crates/noos-p2p/tests/: loopback.rs
crates/noos-private-besi/: Cargo.toml
crates/noos-private-besi/src/: delivery.rs  depth.rs  dual_root.rs  fused_audit.rs  hfhe.rs  lib.rs  mpc3.rs  refresh.rs  tests.rs  transformer.rs  transition_market.rs
crates/noos-private-relayer/: Cargo.toml
crates/noos-private-relayer/src/: lib.rs  main.rs
crates/noos-reflex/: Cargo.toml
crates/noos-reflex/src/: clock.rs  dream.rs  identity.rs  lib.rs
crates/noos-sim-net/: Cargo.toml
crates/noos-sim-net/src/: lib.rs  main.rs
crates/noos-stable-operator/: Cargo.toml
crates/noos-stable-operator/src/: lib.rs
crates/noos-stable-safety/: Cargo.toml
crates/noos-stable-safety/src/: lib.rs
crates/noos-store/: Cargo.toml
crates/noos-store/src/: artifact_store.rs  artifact_store_tests.rs  blob.rs  crash_tests.rs  engine.rs  lib.rs  manifest.rs  store.rs  test_util.rs  tests.rs  vfs.rs  wal.rs
crates/noos-training/: Cargo.toml
crates/noos-training/src/: adjoint.rs  lib.rs  reaction.rs  rl_lag.rs  toploc.rs  wwm.rs
crates/noos-umbra/: Cargo.toml
crates/noos-umbra/src/: branch.rs  fiber_dag.rs  hidden.rs  lib.rs  privacy_ir.rs  private_job.rs  stealth.rs  tee_fiber.rs  tests.rs
deploy/: Dockerfile  cloud-init.yaml  compose.yaml  installer.py  installer_gen.py  monitoring.py  telemetry.py  test_installer.py  test_installer_gen.py  test_telemetry.py  workerd.toml
docs/: application-suite-plan.md  completion-plan.md  defi-security-model.md  liquidity-private-stablecoin-strategy.md  production-hardening-plan.md  world-wide-mind-architecture-and-rd-plan.md
evidence/: base-ai-blackout.json  base-base-transfer-contract.json  base-battery.json  base-client-matrix.json  base-crash-matrix.json  base-wan-fault-matrix.json  differential-admission-10000.json  differential-transitions-100k.json  live-devnet-smoke.json
explorer/: app.js  index.html  render.mjs  (+1 more)
(+774 files in other folders)
