[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
rust-version = "1.96.1"
license = "Apache-2.0"
repository = "https://github.com/mindchain/noosphere"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
arithmetic_side_effects = "warn"
