[package]
name = "noos-agent-class"
version = "0.1.0"
description = "Deterministic AgentID capability and typed-intent firewall"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3 = "=1.8.5"
serde = { version = "=1.0.228", features = ["derive"] }
thiserror = "=2.0.18"

[dev-dependencies]
serde_json = "=1.0.150"

[lints]
workspace = true
