[package]
name = "noos-artifact-service"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Isolated bounded WWM artifact ingest, verification, and custodian transport"

[dependencies]
axum = "=0.8.8"
hex = "=0.4.3"
noos-crypto = { path = "../noos-crypto" }
noos-da = { path = "../noos-da" }
noos-hearth = { path = "../noos-hearth" }
noos-store = { path = "../noos-store" }
sha2 = "=0.10.9"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
tokio = { version = "=1.52.3", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
url = "=2.5.8"

[lints]
workspace = true
