[package]
name = "noos-cli"
version = "0.1.0"
description = "NOOSPHERE operator/user CLI: purpose-separated keygen (noos-wallet derivation law), canonical Lumen transaction build/sign, node line-protocol submit/status, and indexer API queries"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "noos-cli"
path = "src/main.rs"

[features]
default = ["wwm-client"]
wwm-client = ["dep:attohttpc"]

[dependencies]
blake3 = "=1.8.5"
attohttpc = { version = "=0.30.1", features = ["json"], optional = true }
ed25519-dalek = "=2.2.0"
noos-codec = { path = "../noos-codec" }
noos-da = { path = "../noos-da" }
noos-lumen = { path = "../noos-lumen" }
noos-wallet = { path = "../noos-wallet" }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.10.9"
zeroize = "=1.9.0"

[dev-dependencies]
axum = "=0.8.8"
hex = "=0.4.3"
noos-indexer = { path = "../noos-indexer" }
tempfile = "=3.24.0"
tokio = { version = "=1.52.3", features = ["macros", "net", "rt-multi-thread"] }

[lints]
workspace = true
