[package]
name = "noos-crypto"
version = "0.1.0"
description = "NOOSPHERE L0 cryptography: domain-bound BLAKE3 hashing, Ed25519, BLS12-381 (blst min_pk), Feldman/threshold verification, DKG transcript validation, HKDF-SHA-256 derivations. Every public operation is bound to a registered row of protocol/spec/crypto-domains-v1.csv."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3 = "=1.8.5"
blst = "=0.3.16"
blstrs = "=0.7.1"
ed25519-dalek = { version = "=2.2.0", features = ["batch"] }
curve25519-dalek = "=4.1.3"
hkdf = "=0.12.4"
sha2 = "=0.10.9"
thiserror = "=2.0.18"

[dev-dependencies]
hex = "=0.4.3"
serde_json = "=1.0.150"

[lints]
workspace = true
