[package]
name = "noos-indexer"
version = "0.1.0"
description = "MindChain identity-bound indexer and frozen public API v1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = "=0.8.8"
base64 = "=0.22.1"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.10.9"
tokio = { version = "=1.52.3", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
tower = { version = "=0.5.3", features = ["util"] }
tempfile = "=3.24.0"

[lints]
workspace = true
