[package]
name = "noos-mind-gateway"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = "=0.8.8"
async-trait = "=0.1.89"
base64 = "=0.22.1"
blake3 = "=1.8.5"
chacha20poly1305 = "=0.10.1"
futures-util = "=0.3.32"
getrandom = "=0.2.17"
hex = "=0.4.3"
noos-braid = { path = "../noos-braid" }
noos-crypto = { path = "../noos-crypto" }
noos-nel = { path = "../noos-nel" }
noos-da = { path = "../noos-da" }
reqwest = { version = "=0.12.28", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "=0.37.0", features = ["bundled"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.10.9"
tokio = { version = "=1.52.3", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "=0.6.11", features = ["fs"] }
zeroize = "=1.9.0"

[dev-dependencies]
tempfile = "=3.24.0"
tower = { version = "=0.5.3", features = ["util"] }
[lints]
workspace = true
