[package]
name = "noos-mind"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
noos-crypto = { path = "../noos-crypto" }
hex = "=0.4.3"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"

[lints]
workspace = true
