[package]
name = "noos-nel"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3 = "1.8.2"
ed25519-dalek = "2.2.0"
noos-crypto = { path = "../noos-crypto" }

[dev-dependencies]
serde_json = "=1.0.150"
noos-work-loom = { path = "../noos-work-loom" }
noos-hearth = { path = "../noos-hearth" }

[lints]
workspace = true
