[package]
name = "noos-node"
version = "0.1.0"
description = "NOOSPHERE node runtime (plan §7.5-7.7): the noosd bounded supervisor — deterministic single-writer Braid/Lumen pipeline task, store/RPC/sync as separate tasks behind bounded channels, proof checks in a bounded verdict pool, persist-before-vote via the noos-witness DurabilityBarrier wired to noos-store, mempool with canonical-decode admission and fee-density eviction, header-first full sync / finalized snapshot sync / light mode behind the NetworkEdge trait, and the minimal localhost bearer-token operator RPC with noos_* metrics. Public REST API v1, CUDA/Go worker processes, and installers are later phases."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "noosd"
path = "src/bin/noosd.rs"

[dependencies]
blake3 = "1"
getrandom = "0.2"
noos-braid = { path = "../noos-braid" }
noos-contracts = { path = "../noos-contracts" }
noos-codec = { path = "../noos-codec" }
noos-crypto = { path = "../noos-crypto" }
noos-da = { path = "../noos-da" }
noos-grain = { path = "../noos-grain" }
noos-ground = { path = "../noos-ground" }
noos-lumen = { path = "../noos-lumen" }
noos-p2p = { path = "../noos-p2p" }
noos-store = { path = "../noos-store" }
noos-witness = { path = "../noos-witness" }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }

[lints]
workspace = true
