[package]
name = "noos-p2p"
version = "0.1.0"
description = "NOOSPHERE transport: libp2p QUIC with chain-identity binding, nine bounded /noos/ application protocols including protocol-v2 finalized light updates, 1 MiB frame law, consensus-priority scheduling, per-peer limits, duplicate caches, violation cooldowns, reconnect backoff, and targeted repair."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
noos-codec = { path = "../noos-codec" }
noos-crypto = { path = "../noos-crypto" }
noos-lumen = { path = "../noos-lumen" }
# Pinned exactly (plan section 7.4): libp2p QUIC is the normative wire stack.
# Changing either pin is a protocol-operations decision, not a dependency bump.
libp2p = { version = "=0.56.0", default-features = false, features = ["tokio", "quic", "ed25519"] }
libp2p-stream = "=0.4.0-alpha"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

[lints]
workspace = true
