[package]
name = "noos-private-besi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Experimental BESI split private-inference conformance (disabled)"

[dependencies]
blake3 = "1.8"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = "2.2"

[lints]
workspace = true
