[package]
name = "noos-private-relayer"
version = "0.1.0"
description = "Bounded non-custodial Tier 1 private-payment relay intents and sweep scheduling"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3 = "1"
ed25519-dalek = "2"
getrandom = "0.2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[lints]
workspace = true
