[package]
name = "noos-private-relayer"
version = "0.1.0"
description = "Bounded non-custodial Tier 1 private-payment relay intents and sweep scheduling"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "noos-private-relayer"
path = "src/main.rs"

[dependencies]
axum = "0.8"
blake3 = "1"
ed25519-dalek = "2"
getrandom = "0.2"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }

[lints]
workspace = true
