[package]
name = "noos-reflex"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
blake3 = "1.8"
ed25519-dalek = "2.2"
thiserror = "2"

[dev-dependencies]
ed25519-dalek = { version = "2.2", features = ["rand_core"] }

[lints]
workspace = true
