[package]
name = "noos-reflex"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
blake3 = "1.8"
ed25519-dalek = "2.2"
noos-agent-class = { path = "../noos-agent-class" }
noos-braid = { path = "../noos-braid" }
noos-ground = { path = "../noos-ground" }
noos-nel = { path = "../noos-nel" }
noos-training = { path = "../noos-training" }
noos-umbra = { path = "../noos-umbra" }
noos-work-loom = { path = "../noos-work-loom" }
thiserror = "2"

[dev-dependencies]
ed25519-dalek = { version = "2.2", features = ["rand_core"] }

[lints]
workspace = true
