[package]
name = "noos-stable-operator"
version = "0.1.0"
description = "MindChain backstop keeper and five-source oracle reporter services"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "noos-backstop-keeper"
path = "src/bin/backstop_keeper.rs"

[[bin]]
name = "noos-oracle-reporter"
path = "src/bin/oracle_reporter.rs"

[dependencies]
noos-cli = { path = "../noos-cli" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
zeroize = "1"

[lints]
workspace = true
