[package]
name = "noos-training"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
blake3 = "1.8"
noos-analytics = { path = "../noos-analytics" }
noos-nel = { path = "../noos-nel" }
noos-species = { path = "../noos-species" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[lints]
workspace = true
